--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,43 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/utilities.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Főoldal</title>
+</head>
+<body id="home">
+    <header class="hero">
+        <div id="navbar" class="navbar">
+            <h1 class="logo">
+               <span class="text-primary"> <i class="fa-brands fa-react"></i> Rendezvényszervező</span>
+            </h1>
+        </div>
+        <div class="content">
+            <h1>Fogaljon weboldalunkon keresztül</h1>
+            <p>Nálunk biztos van olyan rendezvény ami érdekelheti önt!</p>
+            <a href="login.html" class="btn"><i class="fas fa-chevron-right"></i> Bejelentkezés</a>
+            <h4>Nincs még felhasználói fiókja? <br></h4>
+            <a href="registration.html" class="btn-little">Regisztráció</a>
+        </div>
+    </header>
+    <main>
+        <section id="rolunk" class="icons bg-dark">
+            <div class="flex-items">
+                <div>
+                    <i class="fas fa-university fa-2x"></i>
+                    <div>
+                        <h3>Rendezvény regisztrálás</h3>
+                        <p>Lorem ipsum dolor, sit amet
+                        consectetur adipisicing elit. 
+                        Tempore, repellendus?</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-ticket fa-2x"></i>
+                    <div>
+                        <h3>Helyfoglalás</h3>
+                        <p>Lorem ipsum dolor, sit amet
+                        consectetur adipisicing elit. 
+                        Tempore, repellendus?</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-user fa-2x"></i>
+                    <div>
+                        <h3>Tanácsadás</h3>
+                        <p>Lorem ipsum dolor, sit amet
+                        consectetur adipisicing elit. 
+                        Tempore, repellendus?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer bg-light">
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+        </div>
+        <p>Copyright &copy; 2024</p>
+    </footer>
+</body>
 </html>
