added body to newEvent.html

--- a/client/public/newEvent.html
+++ b/client/public/newEvent.html
@@ -9,3 +9,30 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Regisztráció</title>
 </head>
+<body id="registration">
+    <div class="reg-wrapper">
+        <form action="#" method="post">
+            <h1>Új esemény hozzáadása</h1>
+            <p>Kérjük adja meg a rendezvény adatait</p>
+            <div class="input-box">
+                <input type="text" placeholder="Rendezvény neve">
+                <i class="fa-solid fa-masks-theater"></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Rendezvény címe">
+                <i class="fa-solid fa-map-location-dot"></i>
+            </div>
+            <div class="input-box">
+                <textarea name="description" id="description" placeholder="Rendezvény leírása" ></textarea>
+            </div>
+            <h5>Rendezvény időpontja</h5>
+            <div class="input-box-date">
+                <input type="date" placeholder="Születési dátum">
+                <i class="fa-solid fa-calendar-alt"></i>
+            </div>
+            <br>
+            <button type="submit" class="btn-reg">Elküld</button>
+        </form>
+    </div>
+</body>
+</html>
