--- a/client/public/registration.html
+++ b/client/public/registration.html
@@ -15,23 +15,23 @@
             <h1>Regisztráció</h1>
             <p>Kérjük adja meg az adatait</p>
             <div class="input-box">
-                <input type="text" placeholder="Felhasználónév">
+                <input type="text" id="username" name="username" placeholder="Felhasználónév">
                 <i class="fa-solid fa-user"></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Jelszó">
+                <input type="password" id="password" name="password" placeholder="Jelszó">
                 <i class="fa-solid fa-lock"></i>
             </div>
             <div class="input-box">
-                <input type="email" placeholder="E-mail">
+                <input type="email" id="email" name="email" placeholder="E-mail">
                 <i class="fa-solid fa-envelope"></i>
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Lakóhely">
+                <input type="text" id="habitation" name="habitation" placeholder="Lakóhely">
                 <i class="fa-solid fa-home"></i>
             </div>
             <div class="input-box-dropdown">
-                <select>
+                <select name="gender">
                     <option value="" selected disabled hidden>Válasszon nemet</option>
                     <option value="male">Férfi</option>
                     <option value="female">Nő</option>
@@ -42,16 +42,16 @@
             
             
             <div class="input-box">
-                <input type="text" placeholder="Foglalkozás">
+                <input type="text" id="job" name="job" placeholder="Foglalkozás">
                 <i class="fa-solid fa-briefcase"></i>
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Iskolai végzettség">
+                <input type="text" id="scoolar" name="scoolar" placeholder="Iskolai végzettség">
                 <i class="fa-solid fa-graduation-cap"></i>
             </div>
             <h5>Születési dátum</h5>
             <div class="input-box-date">
-                <input type="date" placeholder="Születési dátum">
+                <input type="date" id="dateOfBirth" name="dateOfBirth" placeholder="Születési dátum">
                 <i class="fa-solid fa-calendar-alt"></i>
             </div>
             <br>
