add some attributes to newEvent.html

--- a/client/public/newEvent.html
+++ b/client/public/newEvent.html
@@ -15,11 +15,11 @@
             <h1>Új esemény hozzáadása</h1>
             <p>Kérjük adja meg a rendezvény adatait</p>
             <div class="input-box">
-                <input type="text" placeholder="Rendezvény neve">
+                <input type="text" id="eventName" name="eventName" placeholder="Rendezvény neve">
                 <i class="fa-solid fa-masks-theater"></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Rendezvény címe">
+                <input type="password" id="addressOfEvent" name="addresOfEvent" placeholder="Rendezvény címe">
                 <i class="fa-solid fa-map-location-dot"></i>
             </div>
             <div class="input-box">
@@ -27,7 +27,7 @@
             </div>
             <h5>Rendezvény időpontja</h5>
             <div class="input-box-date">
-                <input type="date" placeholder="Születési dátum">
+                <input type="date" id="dateOfEvent" name="dateOfEvent" placeholder="Rendezvény időpontja">
                 <i class="fa-solid fa-calendar-alt"></i>
             </div>
             <br>
